# sk-mono

./: .gitignore  .npmignore  Cargo.toml  LICENSE.txt  README.md  checkUpdate.js  dev.sh  dist.sh  install.js  lib.js  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: checkUpdate.js  install.js  lib.d.ts  lib.js  run.js
src/: commands.rs  debugger.rs  lib.rs  lib.ts  main.rs  skmono.ts
src/cli/: debugger.rs  mod.rs  utils.rs
src/cli/commands/: dev.rs  init.rs  mod.rs  test.rs
src/commands/: test.rs
src/lib/: getAppPath.ts  svelteConfig.ts  viteConfig.ts
src/lib/worker/: cache.ts
src/skmono/: index.ts
