[package]
name = "sk-mono"
version = "0.0.2"
authors = ["Will 'Willster' Johnson"]
description = "SvelteKit MonoRepos Made Easy"
license = "GPL-3.0"
readme = "./README.md"
documentation = "./README.md"
edition = "2021"
homepage =  "https://github.com/WillsterJohnson/sk-mono#readme"
repository = "https://github.com/WillsterJohnson/sk-mono.git"
keywords = ["svelte", "sveltekit", "mono", "monorepo", "cli", "sk", "sk-mono"]
categories = ["command-line-utilities","config","development-tools::build-utils","web-programming"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }

